argocd/install/routes/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-server-grpc
  namespace: argocd
  labels:
    app.kubernetes.io/part-of: talos-hetzner-capi
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - argocd.cluster.samuelbagattin.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
